# tianyi-auto

./: AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
src/: main.rs
