[package]
name = "tianyi-auto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "cookies"] }
url = "2.5"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
